sqlParser/sqlparser/SqlParser.java
/* Generated By:JavaCC: Do not edit this line. SqlParser.java */
   package sqlParser.sqlparser;
   import java.util.ArrayList;
   import java.util.HashMap;
   import sqlParser.utilities.*;
   public class SqlParser implements SqlParserConstants {
         public Boolean initParser() throws ParseException, TokenMgrError
   { return(init()) ; }

//Grammer Production Rules
  final public Boolean init() throws ParseException {
    ArrayList<QueryType> queries = new ArrayList<QueryType>();
    QueryType queryType;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case R_SELECT:
      case R_UPDATE:
      case R_CREATE:
      case R_DROP:
      case R_INSERT:
      case R_DELETE:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case R_CREATE:
      case R_DROP:
        queryType = ProcessDDLQuery();
        break;
      case R_UPDATE:
      case R_INSERT:
      case R_DELETE:
        queryType = ProcessDMLQuery();
        break;
      case R_SELECT:
        queryType = ProcessQLQuery();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                        queries.add(queryType);
    }
    Transaction();
     {if (true) return true;}
    throw new Error("Missing return statement in function");
  }

/********************************/
/********* QL queries **********/
/********************************/
  final public QLQuery ProcessQLQuery() throws ParseException {
    QLQuery qlQuery;
    Token queryType;
    queryType = jj_consume_token(R_SELECT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Q_COUNT:
      qlQuery = countAllTable();
      break;
    default:
      jj_la1[2] = jj_gen;
      if (jj_2_1(3)) {
        qlQuery = aggregateFuncWithGroupby();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case O_ASTERISK:
        case Q_ATTRIBUTE:
          qlQuery = selectWithJoins();
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
            qlQuery.setQueryType(queryType.kind);
        {if (true) return qlQuery;}
    throw new Error("Missing return statement in function");
  }

/* select with and withuot joins */
  final public QLQuery selectWithJoins() throws ParseException {
    Token T;
    QLQuery qlQuery = new QLQuery();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Q_ATTRIBUTE:
      getListOfAttributes();
      break;
    case O_ASTERISK:
      jj_consume_token(O_ASTERISK);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(K_FROM);
    if (jj_2_2(2)) {
      jj_consume_token(S_IDENTIFIER);
      jj_consume_token(O_COMMA);
      jj_consume_token(S_IDENTIFIER);
    } else if (jj_2_3(2)) {
      jj_consume_token(S_IDENTIFIER);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case R_WHERE:
      whereWithJoin();
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(O_TERMINATOR);
        {if (true) return qlQuery;}
    throw new Error("Missing return statement in function");
  }

  final public void whereWithJoin() throws ParseException {
    jj_consume_token(R_WHERE);
    if (jj_2_4(4)) {
      singleJoinCondition();
    } else if (jj_2_5(3)) {
      nonJoinCondition();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void singleJoinCondition() throws ParseException {
    jj_consume_token(O_OPENPAREN);
    jj_consume_token(Q_ATTRIBUTE);
    ComparisonOperators();
    jj_consume_token(Q_ATTRIBUTE);
    jj_consume_token(O_CLOSEPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case R_AND:
      jj_consume_token(R_AND);
      nonJoinCondition();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
  }

  final public void nonJoinCondition() throws ParseException {
    jj_consume_token(O_OPENPAREN);
    jj_consume_token(Q_ATTRIBUTE);
    ComparisonOperators();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QUOTED_STRING:
      jj_consume_token(QUOTED_STRING);
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
      break;
    case INTEGER:
      jj_consume_token(INTEGER);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(O_CLOSEPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case R_AND:
    case R_OR:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case R_AND:
        jj_consume_token(R_AND);
        break;
      case R_OR:
        jj_consume_token(R_OR);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      nonJoinCondition();
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
  }

/* COUNT TABLE */
  final public QLQuery countAllTable() throws ParseException {
    Token T;
    QLQuery qlQuery;
    jj_consume_token(Q_COUNT);
    jj_consume_token(K_FROM);
    T = jj_consume_token(S_IDENTIFIER);
              qlQuery = new QLQuery();
              qlQuery.setTableName(T.image);
    jj_consume_token(O_TERMINATOR);
        {if (true) return qlQuery;}
    throw new Error("Missing return statement in function");
  }

/* AGGREGATE FUNCTION WITH GROUP BY */
  final public QLQuery aggregateFuncWithGroupby() throws ParseException {
    Token T;
    QLQuery qlQuery;
    jj_consume_token(Q_ATTRIBUTE);
    jj_consume_token(O_COMMA);
    getAggregateFunction();
    jj_consume_token(K_FROM);
    T = jj_consume_token(S_IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case R_WHERE:
      whereWithJoin();
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    jj_consume_token(R_GROUP);
    jj_consume_token(R_BY);
    jj_consume_token(Q_ATTRIBUTE);
              qlQuery = new QLQuery();
              qlQuery.setTableName(T.image);
    jj_consume_token(O_TERMINATOR);
        {if (true) return qlQuery;}
    throw new Error("Missing return statement in function");
  }

  final public void getListOfAttributes() throws ParseException {
    jj_consume_token(Q_ATTRIBUTE);
    if (jj_2_6(2)) {
      jj_consume_token(O_COMMA);
      getListOfAttributes();
    } else {
      ;
    }
  }

  final public void getAggregateFunction() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Q_COUNT:
      jj_consume_token(Q_COUNT);
      break;
    case Q_SUM:
      jj_consume_token(Q_SUM);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/********************************/
/********* DML queries **********/
/********************************/
  final public DMLQuery ProcessDMLQuery() throws ParseException {
    DMLQuery dmlQuery;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case R_INSERT:
      dmlQuery = insert();
      break;
    case R_DELETE:
      dmlQuery = deleteTuple();
      break;
    case R_UPDATE:
      dmlQuery = updateTuple();
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return dmlQuery;}
    throw new Error("Missing return statement in function");
  }

/* UPDATE TUPLE */
  final public DMLQuery updateTuple() throws ParseException {
    Token T;
    Token queryType;
    DMLQuery dmlQuery;
    queryType = jj_consume_token(R_UPDATE);
    T = jj_consume_token(S_IDENTIFIER);
    jj_consume_token(R_SET);
    ColumnSetter();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case R_WHERE:
      jj_consume_token(R_WHERE);
      ColumnComparison();
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
              dmlQuery = new DMLQuery();
              dmlQuery.setTableName(T.image);
              dmlQuery.setQueryType(queryType.kind);
    jj_consume_token(O_TERMINATOR);
        {if (true) return dmlQuery;}
    throw new Error("Missing return statement in function");
  }

  final public void ColumnSetter() throws ParseException {
    jj_consume_token(S_IDENTIFIER);
    jj_consume_token(O_EQUAL);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QUOTED_STRING:
      jj_consume_token(QUOTED_STRING);
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
      break;
    case INTEGER:
      jj_consume_token(INTEGER);
      break;
    case R_NULL:
      jj_consume_token(R_NULL);
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_COMMA:
      jj_consume_token(O_COMMA);
      ColumnSetter();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

/* INSERT TABLE */
  final public DMLQuery insert() throws ParseException {
    Token T;
    Token queryType;
    DMLQuery dmlQuery;
    queryType = jj_consume_token(R_INSERT);
    T = jj_consume_token(S_IDENTIFIER);
    jj_consume_token(R_VALUES);
    jj_consume_token(O_OPENPAREN);
    InsertValueExpressions();
    jj_consume_token(O_CLOSEPAREN);
              dmlQuery = new DMLQuery();
              dmlQuery.setTableName(T.image);
              dmlQuery.setQueryType(queryType.kind);
    jj_consume_token(O_TERMINATOR);
        {if (true) return dmlQuery;}
    throw new Error("Missing return statement in function");
  }

  final public void InsertValueExpressions() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QUOTED_STRING:
      jj_consume_token(QUOTED_STRING);
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
      break;
    case INTEGER:
      jj_consume_token(INTEGER);
      break;
    case R_NULL:
      jj_consume_token(R_NULL);
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_COMMA:
      jj_consume_token(O_COMMA);
      InsertValueExpressions();
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
  }

/* DELETE TUPLE */
  final public DMLQuery deleteTuple() throws ParseException {
    Token T;
    Token queryType;
    DMLQuery dmlQuery;
    queryType = jj_consume_token(R_DELETE);
    T = jj_consume_token(S_IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case R_WHERE:
      jj_consume_token(R_WHERE);
      ColumnComparison();
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
              dmlQuery = new DMLQuery();
              dmlQuery.setTableName(T.image);
              dmlQuery.setQueryType(queryType.kind);
    jj_consume_token(O_TERMINATOR);
        {if (true) return dmlQuery;}
    throw new Error("Missing return statement in function");
  }

  final public void ColumnComparison() throws ParseException {
    jj_consume_token(S_IDENTIFIER);
    ComparisonOperators();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QUOTED_STRING:
      jj_consume_token(QUOTED_STRING);
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
      break;
    case INTEGER:
      jj_consume_token(INTEGER);
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case R_AND:
    case R_OR:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case R_AND:
        jj_consume_token(R_AND);
        break;
      case R_OR:
        jj_consume_token(R_OR);
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      ColumnComparison();
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
  }

  final public void ComparisonOperators() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_EQUAL:
      jj_consume_token(O_EQUAL);
      break;
    case O_GREATER:
      jj_consume_token(O_GREATER);
      break;
    case O_GREATEREQUAL:
      jj_consume_token(O_GREATEREQUAL);
      break;
    case O_LESS:
      jj_consume_token(O_LESS);
      break;
    case O_LESSEQUAL:
      jj_consume_token(O_LESSEQUAL);
      break;
    case O_NOTEQUAL2:
      jj_consume_token(O_NOTEQUAL2);
      break;
    case O_NOTEQUAL:
      jj_consume_token(O_NOTEQUAL);
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//commit && rollback.
  final public void Transaction() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_COMMIT:
      jj_consume_token(K_COMMIT);
      jj_consume_token(O_TERMINATOR);
      jj_consume_token(0);
      break;
    case K_ROLLBACK:
      jj_consume_token(K_ROLLBACK);
      jj_consume_token(O_TERMINATOR);
      jj_consume_token(0);
      break;
    case 0:
      jj_consume_token(0);
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/********************************/
/********* DDL queries **********/
/********************************/
  final public DDLQuery ProcessDDLQuery() throws ParseException {
    DDLQuery ddlQuery;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case R_CREATE:
      ddlQuery = create();
      break;
    case R_DROP:
      ddlQuery = drop();
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return ddlQuery;}
    throw new Error("Missing return statement in function");
  }

/* DROP TABLE */
  final public DDLQuery drop() throws ParseException {
    Token T;
    Token queryType;
    DDLQuery ddlQuery;
    queryType = jj_consume_token(R_DROP);
    T = jj_consume_token(S_IDENTIFIER);
              ddlQuery = new DDLQuery();
              ddlQuery.setTableName(T.image);
              ddlQuery.setQueryType(queryType.kind);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case R_CASCADE:
      jj_consume_token(R_CASCADE);
      jj_consume_token(R_CONSTRAINTS);
      break;
    default:
      jj_la1[25] = jj_gen;
      ;
    }
    jj_consume_token(O_TERMINATOR);
        {if (true) return ddlQuery;}
    throw new Error("Missing return statement in function");
  }

/* CREATE TABLE */
  final public DDLQuery create() throws ParseException {
    Token T;
    Token queryType;
    DDLQuery ddlQuery;
    HashMap<String,String> attributes;
    queryType = jj_consume_token(R_CREATE);
    T = jj_consume_token(S_IDENTIFIER);
          ddlQuery = new DDLQuery ();
          ddlQuery.setTableName(T.image);
          ddlQuery.setQueryType(queryType.kind);
    jj_consume_token(O_OPENPAREN);
    attributes = ColumnsAndConstraints();
    jj_consume_token(O_CLOSEPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case R_HORIZONTAL:
      processHorizontal();
      break;
    default:
      jj_la1[26] = jj_gen;
      ;
    }
    jj_consume_token(O_TERMINATOR);
        ddlQuery.setAttributes(attributes);
        {if (true) return ddlQuery;}
    throw new Error("Missing return statement in function");
  }

  final public void processHorizontal() throws ParseException {
    jj_consume_token(R_HORIZONTAL);
    jj_consume_token(O_OPENPAREN);
    jj_consume_token(S_IDENTIFIER);
    jj_consume_token(O_OPENPAREN);
    PartioningLimits();
    jj_consume_token(O_CLOSEPAREN);
    jj_consume_token(O_CLOSEPAREN);
  }

  final public void PartioningLimits() throws ParseException {
    label_2:
    while (true) {
      jj_consume_token(INTEGER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER:
        ;
        break;
      default:
        jj_la1[27] = jj_gen;
        break label_2;
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_COMMA:
      jj_consume_token(O_COMMA);
      jj_consume_token(INTEGER);
      break;
    default:
      jj_la1[28] = jj_gen;
      ;
    }
  }

  final public HashMap ColumnsAndConstraints() throws ParseException {
   HashMap<String,String> var = new HashMap<String, String>();
    label_3:
    while (true) {
      var = Columns();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case S_IDENTIFIER:
        ;
        break;
      default:
        jj_la1[29] = jj_gen;
        break label_3;
      }
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_COMMA:
        ;
        break;
      default:
        jj_la1[30] = jj_gen;
        break label_4;
      }
      jj_consume_token(O_COMMA);
      Constraints();
    }
   {if (true) return var;}
    throw new Error("Missing return statement in function");
  }

  final public HashMap Columns() throws ParseException {
   Token TName;
   Token TType;
   HashMap<String,String> var = new HashMap<String, String>();
    TName = jj_consume_token(S_IDENTIFIER);
    //name of the column
        TType = ColType();
    if (jj_2_7(2)) {
      jj_consume_token(O_COMMA);
      Columns();
    } else {
      ;
    }
     var.put(TName.image,TType.image);
   {if (true) return var;}
    throw new Error("Missing return statement in function");
  }
